--- a/PwaTest.html
+++ b/PwaTest.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>PwaTest</title>
-    <link rel="mainfest" href="./mainfest.json" />
+    <link rel="manifest" href="./manifest.json" />
     <script language="javascript">
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker
