--- a/PwaTest.html
+++ b/PwaTest.html
@@ -36,7 +36,7 @@
                 写真アップロード
             </td>
             <td>
-                <input type="file" accept="image/*" capture="camera" />
+                <input type="file" accept="image/*" capture />
             </td>
         </tr>
         <tr>
@@ -44,7 +44,7 @@
                     録音アップロード
                 </td>
                 <td>
-                    <input type="file" accept="audio/*" capture="microphone" />
+                    <input type="file" accept="audio/*" multiple />
                 </td>
             </tr>
     </table>
