--- a/PwaTest.html
+++ b/PwaTest.html
@@ -36,7 +36,7 @@
                 写真アップロード
             </td>
             <td>
-                <input type="file" accept="image/*;capture=camera">
+                <input type="file" accept="image/*">
             </td>
         </tr>
         <tr>
