--- a/PwaTest.html
+++ b/PwaTest.html
@@ -44,7 +44,7 @@
                     録音アップロード
                 </td>
                 <td>
-                    <input type="file" accept="audio/*;capture=microphone" />
+                    <input type="file" accept="audio/*;capture=microphone">
                 </td>
             </tr>
     </table>
