--- a/PwaTest.html
+++ b/PwaTest.html
@@ -10,7 +10,7 @@
     <script language="javascript">
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker
-                .register('./JS/service-worker.js')
+                .register('./service-worker.js')
                 .then(function () {
                     console.log('Service Worker Registered');
                 });
