--- a/PwaTest.html
+++ b/PwaTest.html
@@ -8,8 +8,8 @@
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 
     <link rel="manifest" href="./manifest.json" />
-    <script language="javascrppt" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" />
-    <script language="javascrppt" src="./JS/Audio_API.js" />
+    <script language="javascrppt" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script language="javascrppt" src="./JS/Audio_API.js"></script>
 
     <script language="javascript">
         if ('serviceWorker' in navigator) {
