--- a/PwaTest.html
+++ b/PwaTest.html
@@ -54,6 +54,7 @@
                 <input type="button" id="btnRecordStop" value="録音終了" />
                 &nbsp;
                 <audio id="player" controls></audio>
+                <input type="hidden" id="demo_speaking_wave_file" />
             </td>
         </tr>
     </table>
