--- a/login.html
+++ b/login.html
@@ -27,8 +27,8 @@
             margin: 0px 4px;
             padding: 2px;
             height: 25px;
-            width:80px;
-            max-width: 80px;
+            width:100px;
+            max-width: 120px;
             border:solid 1px #ddd;
             float: left;
         }
@@ -37,6 +37,9 @@
             max-width: 80px;
             border:solid 1px #ddd;
             float: left;
+        }
+        a.info {
+            font-size:10px;
         }
     </style>
 </head>
