--- a/login.html
+++ b/login.html
@@ -12,11 +12,6 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
 
-        table {
-            font-size: 12px;
-            color: #090696
-        }
-
         span.required {
             color: #ff0000;
             font-size: 10px;
@@ -41,19 +36,33 @@
         a.info {
             font-size:10px;
         }
+        ul {
+            margin:4px;
+            line-height: 150%;
+        }
+        ul li {
+            list-style: none;
+        }
     </style>
 </head>
 
 <body>
     <div class="header">現場支援システム</div>
     <div class="cotent">
-        <input type="text" id="txtUserName" name="userName" class="text" maxlength="32" />
-        <br/>
-        <input type="password" id="txtUserPwd" name="userPwd" class="text" maxlength="16" />
-        <br/>
-        <button class="btn">ログイン</button>
-        <br/>
-        <a href="./forgot_pwd.html" class="info">パスワードを忘れた場合</a>
+        <ul>
+            <li>
+                <input type="text" id="txtUserName" name="userName" class="text" maxlength="32" />
+            </li>
+            <li>
+                <input type="password" id="txtUserPwd" name="userPwd" class="text" maxlength="16" />
+            </li>
+            <li>
+                <button class="btn">ログイン</button>
+            </li>
+            <li>
+                <a href="./forgot_pwd.html" class="info">パスワードを忘れた場合</a>
+            </li>
+        </ul>
     </div>
     <div class="footer"></div>
 </body>
