--- a/PwaTest.html
+++ b/PwaTest.html
@@ -9,7 +9,7 @@
 
     <link rel="manifest" href="./manifest.json" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./JS/Audio_API.js"></script>
+    <script src="./js/audio_api.js"></script>
 
     <script language="javascript">
         if ('serviceWorker' in navigator) {
