--- a/PwaTest.html
+++ b/PwaTest.html
@@ -14,7 +14,7 @@
     <script language="javascript">
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker
-                .register('./service-worker.js')
+                .register('./js/service-worker.js')
                 .then(function () {
                     console.log('Service Worker Registered');
                 });
