--- a/login.html
+++ b/login.html
@@ -40,6 +40,7 @@
             font-size: 14px;
             font-weight: bold;
             color: #0d0d0d;
+            margin-top: 40px;
         }
 
         span.required {
