--- a/PwaTest.html
+++ b/PwaTest.html
@@ -67,7 +67,7 @@
         </tr>
     </table>
     <p>
-        <span></span>
+        <img src="./image/lifecycle.gif" border="0px" />
     </p>
     <p align="center">
         <a href="PwaTest2.html">PwaTest2</a>
