--- a/PwaTest.html
+++ b/PwaTest.html
@@ -21,11 +21,10 @@
                         registration.unregister();
                     } })
             */
-            navigator.serviceWorker
-                .register('./js/service-worker.js')
-                .then(function () {
-                    console.log('Service Worker Registered');
-                });
+            navigator.serviceWorker.register('/service-worker.js').then(function ()
+            {
+                console.log('Service Worker Registered');
+            });
         }
     </script>
     <style>
