service worker path changed

--- a/PwaTest.html
+++ b/PwaTest.html
@@ -21,7 +21,7 @@
                         registration.unregister();
                     } })
             */
-            navigator.serviceWorker.register('/service-worker.js').then(function ()
+            navigator.serviceWorker.register('./service-worker.js').then(function ()
             {
                 console.log('Service Worker Registered');
             });
