service-worker.js modified

--- a/PwaTest.html
+++ b/PwaTest.html
@@ -69,7 +69,9 @@
         <img src="./image/lifecycle.gif" border="0px" />
     </p>
     <p align="center">
-        <a href="PwaTest2.html">PwaTest2</a>
+        <a href="./PwaTest2.html">PwaTest2</a>
+        &nbsp;&nbsp;
+        <a href="./login.html">Login</a>
     </p>
 </body>
 
