workbox-sw.js利用

--- a/PwaTest.html
+++ b/PwaTest.html
@@ -1,7 +1,7 @@
 <html lang="ja">
 
 <head>
-    <title>PwaTest</title>
+    <title>トップ</title>
     <meta name="charset" content="UTF-8" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport"
