--- a/PwaTest.html
+++ b/PwaTest.html
@@ -62,9 +62,18 @@
                 <input type="button" id="btnRecordStart" value="録音開始" />
                 &nbsp;
                 <input type="button" id="btnRecordStop" value="録音終了" />
-                &nbsp;
+                <!--
                 <audio id="player" controls></audio>
                 <input type="hidden" id="demo_speaking_wave_file" />
+                -->
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <a href="javascript:void(0)" onclick="javascript:loadWorkList()">データロード</a>
+            </td>
+            <td>
+                <div id="div_worklist"></div>
             </td>
         </tr>
     </table>
@@ -76,6 +85,17 @@
         &nbsp;&nbsp;
         <a href="./login.html">Login</a>
     </p>
+    <script>
+    function loadWorkList() {
+        let reqUrl = "./worklist.xhtml";
+        $.getJSON(
+            reqUrl,
+            function(jsonData){
+                $("#div_worklist").html(jsonData.length);
+            }
+        )
+    }
+    </script>
 </body>
 
 </html>
