--- a/login.xhtml
+++ b/login.xhtml
@@ -6,8 +6,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-    <link rel="stylesheet" href="./style/main.css">
-    <link rel="manifest" href="./manifest.json" >
+    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="manifest" href="./manifest.json" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
         // SW登録
@@ -40,7 +40,6 @@
         }
     </script>
 </head>
-
 <body>
     <div class="header">現場支援システム</div>
     <div class="content">
