--- a/home.html
+++ b/home.html
@@ -60,9 +60,9 @@
         <img src="./image/lifecycle.gif" border="0px" />
     </p>
     <p align="center">
-        <a href="./workdetail.xhtml">詳細</a>
+        <a href="./workdetail.html">詳細</a>
         &nbsp;&nbsp;
-        <a href="./login.xhtml">ログイン</a>
+        <a href="./login.html">ログイン</a>
     </p>
     <script>
     function loadWorkList() {
