--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
 <body>
     <div class="header">現場支援システム</div>
     <div class="content">
-        <form action="./home.xhtml" method="POST" id="frmLogin" name="frmLogin">
+        <form action="./home.html" method="POST" id="frmLogin" name="frmLogin">
             <ul>
                 <li>
                     <input type="text" id="txtUserName" name="userName" class="text" maxlength="32" />
@@ -55,7 +55,7 @@
                     <button class="btn" id="btnLogin" type="submit">ログイン</button>
                 </li>
                 <li>
-                    <a href="./forgot_pwd.xhtml" class="info">パスワードを忘れた場合</a>
+                    <a href="./forgot_pwd.html" class="info">パスワードを忘れた場合</a>
                 </li>
             </ul>
 
