--- a/workdetail.html
+++ b/workdetail.html
@@ -23,7 +23,7 @@
                 </div>
             </li>
         </ul>
-        <a href="./home.xhtml">作業一覧</a>
+        <a href="./home.html">作業一覧</a>
     </div>
     <div class="footer"></div>
 </body>
