--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
 <body>
     <div class="header">現場支援システム</div>
     <div class="content">
-        <form action="./home.html" method="POST" id="frmLogin" name="frmLogin">
+        <form action="./home.html" method="GET" id="frmLogin" name="frmLogin">
             <ul>
                 <li>
                     <input type="text" id="txtUserName" name="userName" class="text" maxlength="32" />
