--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
     <div class="header">現場支援システム</div>
     <div class="content">
         <form action="./home.html" method="GET" id="frmLogin" name="frmLogin">
-            <ul>
+            <ul class="list">
                 <li>
                     <input type="text" id="txtUserName" name="userName" class="text" maxlength="32" />
                 </li>
