--- a/workdetail.html
+++ b/workdetail.html
@@ -3,6 +3,10 @@
 <head>
     <title>作業詳細</title>
     <meta name="charset" content="UTF-8" />
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Cache" content="no-cache">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
@@ -24,7 +28,7 @@
         <div class="title">作業詳細</div>
     </div>
     <div class="content">
-        <table with="80%" height="60px">
+        <table width="100%" height="60px">
             <th>
             <td>検証項目</td>
             <td></td>
