--- a/home.html
+++ b/home.html
@@ -20,15 +20,15 @@
         <div class="title">今日の作業一覧</div>
     </div>
     <div class="content">
-        <ul class="list" id="ul-worklist">
-        </ul>
+        <ul class="list" id="ul-worklist"></ul>
     </div>
-    <div class="footer"></div>
-    <p align="center">
-        <a href="./workdetail.html">詳細</a>
-        &nbsp;&nbsp;
-        <a href="./login.html">ログイン</a>
-    </p>
+    <div class="footer">
+        <p align="center">
+            <a href="./workdetail.html">詳細</a>
+            &nbsp;&nbsp;
+            <a href="./login.html">ログイン</a>
+        </p>
+    </div>
     <script>
         $(function(){
             loadWorkList();
