--- a/workdetail.html
+++ b/workdetail.html
@@ -19,45 +19,51 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             color: #090696
         }
+
+        table tr {
+            height: 30px;
+        }
     </style>
 </head>
 
 <body>
     <div class="header">
-        <div class="nav" style="display:none"><a href="javascript:void(0)">&lt;</a></div>
+        <div class="nav"><a href="javascript:void(0)">&lt;</a></div>
         <div class="title">作業詳細</div>
     </div>
     <div class="content">
-        <table width="100%" height="60px">
-            <th>
-            <td>検証項目</td>
-            <td></td>
-            </th>
-            <tr>
-                <td>
-                    写真アップロード
-                </td>
-                <td>
-                    <input type="file" accept="image/*" />
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    録音アップロード
-                </td>
-                <td>
-                    <!-- <input type="file" accept="audio/*" capture="microphone"> -->
-                    <input type="button" id="btnRecordStart" value="録音開始" />
-                    &nbsp;
-                    <input type="button" id="btnRecordStop" value="録音終了" />
-                    <!--
-                            <audio id="player" controls></audio>
-                            <input type="hidden" id="demo_speaking_wave_file" />
-                            -->
-                </td>
-            </tr>
-        </table>
+        <div id="div-notice" class="notice">通知情報</div>
+        <ul class="list">
+            <li>XXXガス工事改装作業</li>
+            <li>2019/11/01 10:00 〜 17:30</li>
+            <li><a class="map" href="maps:q=埼玉県さいたま市中央区本町西4-17-10">埼玉県さいたま市中央区本町西4-17-10</a></li>
+            <li>
+                <div class="workstatus">作業中</div>
+            </li>
+            <li>
+                <button class="buttonBig left enable">作業開始</button>
+                <button class="buttonBig right disabled"></button>>作業終了</button>
+            </li>
+            <li>
+                <button class="buttonBig left blue">TBM-RKY</button>
+                <button class="buttonBig right orange"></button>>作業アルバム</button>
+            </li>
+            <li>
+                <button class="buttonBig left blue">安全確認書</button>
+                <button class="buttonBig right orange"></button>>パロトールアルバム</button>
+            </li>
+            <li>
+                <button class="buttonBig left blue">パロトール実施記録</button>
+                <button class="buttonBig right lightorange"></button>>録音</button>
+            </li>
+            <li>
+                <button class="buttonBig left cyan">ノート</button>
+                <button class="buttonBig right red"></button>>緊急連絡</button>
+            </li>
+        </ul>
         <a href="./home.html">作業一覧</a>
+        &nbsp;
+        <a href="line://nv/chat">Line起動</a>
     </div>
     <div class="footer"></div>
 </body>
