--- a/workdetail.html
+++ b/workdetail.html
@@ -32,7 +32,11 @@
         <div class="title">作業詳細</div>
     </div>
     <div class="content">
-        <div id="div-notice" class="notice">通知情報</div>
+        <div id="div-notice" class="notice">
+            <p class="animate">
+                大型で猛烈な台風19号　三連休に関東直撃へ　暴風被害に厳重警戒を
+            </p>
+        </div>
         <ul class="list">
             <li>XXXガス工事改装作業</li>
             <li>2019/11/01 10:00 〜 17:30</li>
@@ -42,23 +46,23 @@
             </li>
             <li>
                 <button class="buttonBig left enable">作業開始</button>
-                <button class="buttonBig right disabled"></button>>作業終了</button>
+                <button class="buttonBig right disabled">>作業終了</button>
             </li>
             <li>
                 <button class="buttonBig left blue">TBM-RKY</button>
-                <button class="buttonBig right orange"></button>>作業アルバム</button>
+                <button class="buttonBig right orange">作業アルバム</button>
             </li>
             <li>
                 <button class="buttonBig left blue">安全確認書</button>
-                <button class="buttonBig right orange"></button>>パロトールアルバム</button>
+                <button class="buttonBig right orange">パロトールアルバム</button>
             </li>
             <li>
                 <button class="buttonBig left blue">パロトール実施記録</button>
-                <button class="buttonBig right lightorange"></button>>録音</button>
+                <button class="buttonBig right lightorange">録音</button>
             </li>
             <li>
                 <button class="buttonBig left cyan">ノート</button>
-                <button class="buttonBig right red"></button>>緊急連絡</button>
+                <button class="buttonBig right red">緊急連絡</button>
             </li>
         </ul>
         <a href="./home.html">作業一覧</a>
