--- a/workdetail.html
+++ b/workdetail.html
@@ -28,13 +28,15 @@
 
 <body>
     <div class="header">
-        <div class="nav"><a href="javascript:void(0)">&lt;</a></div>
-        <div class="title">作業詳細</div>
+        <div class="title">
+            <span class="nav"><a href="javascript:void(0)">&lt;</a></span>
+            作業詳細
+        </div>
     </div>
     <div class="content">
         <div id="div-notice" class="notice">
             <p class="animate">
-                大型で猛烈な台風19号　三連休に関東直撃へ　暴風被害に厳重警戒を
+                <a href="javascript:void(0)">大型で猛烈な台風19号三連休に関東直撃へ暴風被害に厳重警戒を</a>
             </p>
         </div>
         <ul class="list">
@@ -46,7 +48,7 @@
             </li>
             <li>
                 <button class="buttonBig left enable">作業開始</button>
-                <button class="buttonBig right disabled">>作業終了</button>
+                <button class="buttonBig right disabled">作業終了</button>
             </li>
             <li>
                 <button class="buttonBig left blue">TBM-RKY</button>
