--- a/login.html
+++ b/login.html
@@ -11,26 +11,49 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
         // SW登録
-        var appVerb = '3.2';
+        var appVerb = '3.5';
         var swPath = './service-worker.js';
-        const storeageName = 'sw_version'; 
+        const storeageName = 'sw_version';
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register(swPath).then(reg => {
                 console.log('Service Worker Registered');
-                if (!localStorage.getItem(storeageName)) {
-                    localStorage.setItem(storeageName, appVerb);
-                } else if ( localStorage.getItem(storeageName) !== appVerb) {
-                    reg.update().then(function () {
-                        localStorage.setItem(storeageName, appVerb)
-                    });
+                if (!getLocalCache(storeageName)) {
+                    updateLocalCache(storeageName, appVerb);
+                } else if (getLocalCache(storeageName) !== appVerb) {
+                    // reg.update().then(function () {
+                    //     updateLocalCache(storeageName, appVerb)
+                    // });
+                    this.skipWaiting(reg).then(() => {window.location.reload()});
                 } else {
                     // do nothing
                 }
             });
         }
 
-        function updateLocalStorage(key, val) {
-            localStorage.setItem(storeageName, appVerb)
+        function skipWaiting(reg) {
+            const worker = reg.waiting
+            if (!worker) {
+                return Promise.resolve()
+            }
+            return new Promise((resolve, reject) => {
+                const channel = new MessageChannel()
+                channel.port1.onmessage = (event) => {
+                    if (event.data.error) {
+                        reject(event.data.error)
+                    } else {
+                        resolve(event.data)
+                    }
+                }
+                worker.postMessage({ type: 'skip-waiting', verb: appVerb }, [channel.port2])
+            })
+        }
+
+        function updateLocalCache(key, val) {
+            localStorage.setItem(key, val);
+        }
+
+        function getLocalCache(key) {
+            return localStorage.getItem(key);
         }
 
         $(function () {
@@ -45,6 +68,7 @@
         })
     </script>
 </head>
+
 <body>
     <div class="header">現場支援システム</div>
     <div class="content">
