--- a/login.html
+++ b/login.html
@@ -11,44 +11,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
         // SW登録
-        var appVerb = '3.6';
-        var swPath = './service-worker.js';
-        const storeageName = 'sw_version';
+        const swPath = './service-worker.js';
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register(swPath).then(reg => {
                 console.log('Service Worker Registered');
-                if (!getLocalCache(storeageName)) {
-                    updateLocalCache(storeageName, appVerb);
-                } else if (getLocalCache(storeageName) !== appVerb) {
-                    // reg.update().then(function () {
-                    //     updateLocalCache(storeageName, appVerb)
-                    // });
-                    this.skipWaiting(reg).then(() => {
-                        updateLocalCache(storeageName, appVerb);
-                        window.location.reload();
-                    });
-                } else {
-                    // do nothing
-                }
             });
-        }
-
-        function skipWaiting(reg) {
-            const worker = reg.waiting
-            if (!worker) {
-                return Promise.resolve()
-            }
-            return new Promise((resolve, reject) => {
-                const channel = new MessageChannel()
-                channel.port1.onmessage = (event) => {
-                    if (event.data.error) {
-                        reject(event.data.error)
-                    } else {
-                        resolve(event.data)
-                    }
-                }
-                worker.postMessage({ type: 'skip-waiting', verb: appVerb }, [channel.port2])
-            })
         }
 
         function updateLocalCache(key, val) {
