--- a/login.html
+++ b/login.html
@@ -3,9 +3,14 @@
 <head>
     <title>Login</title>
     <meta name="charset" content="UTF-8" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+    <link rel="apple-touch-icon" sizes="192x192" href="https://davidleetre.github.io/WebApp/static/favicons/icon-192x192.png" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Twitter" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="white" />
+    <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="./style/main.css" />
     <link rel="manifest" href="./manifest.json" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
