--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" sizes="192x192" href="https://davidleetre.github.io/WebApp/static/favicons/icon-192x192.png" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Twitter" />
+    <meta name="apple-mobile-web-app-title" content="現場支援" />
     <meta name="apple-mobile-web-app-status-bar-style" content="white" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="./style/main.css" />
